--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -18,6 +18,8 @@ Version 2.5
 - WBW: Updated Apps built with Aztec C to use the TINY library
 - WBW: Updated CPMNAME application to reflect latest config data block
 - WBW: Support up to 4 UART devices
+- WBW: Partial support for Multifunction / PIC (UART & PPIDE)
+- WBW: Add chip detection to UART driver
 
 Version 2.1.1
 -------------
