--- a/branches/wbw/Doc/ChangeLog.txt
+++ b/branches/wbw/Doc/ChangeLog.txt
@@ -1,3 +1,11 @@
+Version 2.5.2
+-------------
+- WBW: Added initial support for RAM Floppy
+
+Version 2.5.1
+-------------
+- WBW: Fix PPIDE bug
+
 Version 2.5
 -----------
 - WBW: Implemented CRT driver model (video and keyboard)
