--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,3 +1,8 @@
+Version 2.5.4
+-------------
+- WBW: Fixed IOBYTE handling
+- WBW: Added Propeller firmware support for PropIO V2
+
 Version 2.5.3
 -------------
 - WBW: Fixed EXM in DPB for 360K floppy definition (credit to Martin for finding this error)
