--- a/branches/wbw26/Doc/ChangeLog.txt
+++ b/branches/wbw26/Doc/ChangeLog.txt
@@ -1,3 +1,7 @@
+Version 2.6.2
+-------------
+- WBW: ASSIGN.COM substantially improved to map all drive types
+
 Version 2.6.1
 -------------
 - WBW: Both CP/M and ZSystem are imbedded in the ROM
