--- a/trunk/Doc/ChangeLog.txt
+++ b/trunk/Doc/ChangeLog.txt
@@ -1,3 +1,7 @@
+Version 2.6.5
+-------------
+- WBW: Yet more DS1302 clock driver delay mods
+
 Version 2.6.4
 -------------
 - WBW: Yet more DS1302 clock driver delay mods
