--- a/branches/wbw/Doc/ChangeLog.txt
+++ b/branches/wbw/Doc/ChangeLog.txt
@@ -1,3 +1,8 @@
+Version 2.7.0
+-------------
+- WBW: Memory page reorganization
+- WBW: Support for Zeta 2 (from Sergey Kiselev)
+
 Version 2.6.5
 -------------
 - WBW: Yet more DS1302 clock driver delay mods
