--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,6 +1,10 @@
+Version 2.8.0
+-------------
+- WBW: Add support for VGA3 board
+
 Version 2.7.1
 -------------
-- WBW: Replace XZ with XP compatible build (no functional changes)
+- WBW: Replace ZX with XP compatible build (no functional changes)
 - WBW: Reset BDOS serial number on warm start
 - WBW: Turn off DRAM refresh on Z180 (fixes Z180 CPU speed detection)
 
