--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,3 +1,8 @@
+Version 2.8.1
+-------------
+- WBW: Fix FDISK80
+- WBW: Upgrade to latest production UNA 2.1-45
+
 Version 2.8.0
 -------------
 - WBW: Add support for VGA3 board
