Update Win32DiskImager to v1.0

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,3 +1,9 @@
+Version 2.9.1
+-------------
+- E?B: Added support for RC2014 RTC
+- WBW: Converted PTXPLAY to TUNE (now plays PT2/PT3/MYM sounds files)
+- WBW: Updated Win32DiskImager to v1.0
+
 Version 2.9.0
 -------------
 - WBW: Implemented multi-sector I/O in all disk drivers
@@ -6,6 +12,7 @@ Version 2.9.0
 - WBW: Updated FDU app to support RC2014 floppy controllers
 - WBW: Added TIMER app to display system timer value
 - WBW: Refactored interrupt management code
+- WBW: Added PTXPLAY application and sample tunes
 
 Version 2.8.6
 -------------
