--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -4,6 +4,7 @@ Version 2.9.1
 - WBW: Converted PTXPLAY to TUNE (now plays PT2/PT3/MYM sounds files)
 - WBW: Updated Win32DiskImager to v1.0
 - WBW: Implemented character attributes on Propeller based consoles
+- M?S: Added support for BEL function in Propeller based consoles
 
 Version 2.9.0
 -------------
