--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -9,6 +9,9 @@ Version 2.9.1
 - WBW: Map LPT: to second serial port, UL1: to third serial port
 - WBW: Update default IOBYTE so that LST:=LPT: by default
 - WBW: Fixed missing drive/head setup for writes in PPIDE
+- WBW: Fixed XModem HBIOS console driver for file send operations
+- WBW: Preliminary support for RC180 platform (Z180 module in RC2014)
+- WBW: Added NZCOM distribution files to third slice of hard disk image
 
 Version 2.9.0
 -------------
