--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -13,6 +13,7 @@ Version 2.9.1
 - WBW: Preliminary support for RC180 platform (Z180 module in RC2014)
 - WBW: Added NZCOM distribution files to third slice of hard disk image
 - WBW: Fixed getnum32 bug in MODE command (found by Phil Summers)
+- P?S: Added serial support for Zilog Peripherals Baord
 
 Version 2.9.0
 -------------
