--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -15,6 +15,8 @@ Version 2.9.1
 - WBW: Fixed getnum32 bug in MODE command (found by Phil Summers)
 - P?S: Added serial support for Zilog Peripherals Baord
 - WBW: Added preliminary support for interrupt management API
+- P?S: Improved boot messages in RAM-Floppy driver
+- P?S: Added charge setting display to RTC boot messages
 
 Version 2.9.0
 -------------
