--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -24,6 +24,7 @@ Version 2.9.1
 - WBW: Refactored DSKY code
 - S?K: Initial support for Easy Z80
 - PMS: Enhance VDU driver to support alternative screen dimensions
+- WBW: DDT and DDTZ modified to use RST 30 instead of RST 38 to avoid conflicts with IM 1 interrupts
 
 Version 2.9.0
 -------------
