--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -29,6 +29,7 @@ Version 2.9.1
 - WBW: Support LBA style access in floppy driver
 - WBW: Added beta version of FAT filesystem utility (copy, dir, del, ren)
 - SCC: Added support for native memory addressing on Z180-based RC2014
+- PMS: Dynamically discover and display processor type at boot
 
 Version 2.9.0
 -------------
