--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -3,6 +3,8 @@ Version 2.9.2
 - PMS: Fixed DS1210-related issue resulting in "Invalid BIOS" errors
 - SCC: Support for SC126 motherboard
 - WBW: Enable Auto-CTS/DCD in SIO driver for pacing output data
+- WBW: Support missing pull-up resistors in SD driver (a common occurence)
+- WBW: Support two SIO modules w/ auto-detection
 
 Version 2.9.1
 -------------
