--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -6,6 +6,7 @@ Version 2.9.2
 - WBW: Support missing pull-up resistors on SPI SD adapter boards (common)
 - WBW: Support two SIO modules w/ auto-detection
 - PMS: Support ECB USB-FIFO board
+- WBW: Fixed ASSIGN issue with incorrect DPB selection
 
 Version 2.9.1
 -------------
