--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -13,6 +13,7 @@ Version 2.9.2
 - WBW: Config files cleanup
 - WBW: Add interrupt support to ASCI driver
 - WBW: Refactored XModem overlay, merged USB-FIFO support
+- PMS: Added DS1210 low battery detection/message
 
 Version 2.9.1
 -------------
