Disk I/O to/from Banked Memory
Supports double-buffered disk i/o to read/write to/from any memory bank specified.

NOTE:  Disk I/O will be temporarily slower than normal because all I/O is being forced thru double-buffering for testing.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -14,6 +14,8 @@ Version 2.9.2
 - WBW: Add interrupt support to ASCI driver
 - WBW: Refactored XModem overlay, merged USB-FIFO support
 - PMS: Added DS1210 low battery detection/message
+- PMS: Added note playing ability to SPK driver
+- WBW: Support disk I/O to any memory bank
 
 Version 2.9.1
 -------------
