--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -18,6 +18,7 @@ Version 2.9.2
 - WBW: Support disk I/O to any memory bank
 - WBW: Fix floppy I/O error on slow CPUs w/ ints active (credit Jorge Rodrigues)
 - WBW: Support for KIO chip (based on board by Tom Szolyga)
+- N?B: Made ZCAL Y2K compliant
 
 Version 2.9.1
 -------------
