--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -24,6 +24,8 @@ Version 2.9.2
 - WBW: SC126 platform renamed to SCZ180 w/ configs for SC126, SC130
 - WBW: Add status LED support
 - WBW: Add support for secondry SPI (SD Card) on SC126
+- PMS: Add sound support to NASCOM BASIC
+- WBW: Updated FAT to add MD and FORMAT commands
 
 Version 2.9.1
 -------------
