Preliminary support for Dyno Computer
Dyno Computer is the work of Steve Garcia and much of the code checked in is based on his work.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -33,6 +33,8 @@ Version 2.9.2
 - PMS: Added timer support for Zilog Peripherals ECB Board
 - PLS: Enhanced Intel Hex Load in dbgmon
 - WBW: Overhaul disk image creation
+- WBW: Added support for Dyno platform (based on work by Steve Garcia)
+- S?G: Added support for BQ4845 RTC (bqrtc.asm)
 
 Version 2.9.1
 -------------
