--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -35,6 +35,7 @@ Version 2.9.2
 - WBW: Overhaul disk image creation
 - WBW: Added support for Dyno platform (based on work by Steve Garcia)
 - S?G: Added support for BQ4845 RTC (bqrtc.asm)
+- PMS: Added 80x30 video mode to VGA3 driver
 
 Version 2.9.1
 -------------
