Disk image creation improvements

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -36,6 +36,7 @@ Version 2.9.2
 - WBW: Added support for Dyno platform (based on work by Steve Garcia)
 - S?G: Added support for BQ4845 RTC (bqrtc.asm)
 - PMS: Added 80x30 video mode to VGA3 driver
+- PMS: Added 80x43 video mode
 
 Version 2.9.1
 -------------
