--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -40,6 +40,8 @@ Version 2.9.2
 - PMS: Added font compression option
 - PMS: Added a "safe mode" startup w/ minimal device support
 - WBW: Switch RC/SC Z180 platforms to 115,200 default baud rate
+- PMS: Enhanced PPIDE driver to handle multiple PPI interfaces
+- PMS: Added a ROM based game
 
 Version 2.9.1
 -------------
