--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -42,6 +42,7 @@ Version 2.9.2
 - WBW: Switch RC/SC Z180 platforms to 115,200 default baud rate
 - PMS: Enhanced PPIDE driver to handle multiple PPI interfaces
 - PMS: Added a ROM based game
+- WBW: Only assign drive letters to hard disk devices with media
 
 Version 2.9.1
 -------------
