Support multiple devices in IDE driver

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -43,6 +43,10 @@ Version 2.9.2
 - PMS: Enhanced PPIDE driver to handle multiple PPI interfaces
 - PMS: Added a ROM based game
 - WBW: Only assign drive letters to hard disk devices with media
+- WBW: Enhanced IDE driver to handle multiple IDE interfaces
+- D?R: Contributed SC126 How-To: Preparing a MicroSD Card to Transfer Files to/from a Linux System
+- PMS: Updated romldr to handle more than 9 drives
+- PMS: Added "user" rom module template
 
 Version 2.9.1
 -------------
