Improve XModem Startup
- Extended startup timeout for XM.COM so that it doesn't timeout so quickly while host is selecing a file to send.
- Updated SD Card How-To from David Reese.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,3 +1,7 @@
+Version 3.0.1
+-------------
+- WBW: Increase XModem timeout waiting for host to start sending
+
 Version 3.0.0
 -------------
 - WBW: v2.9.2 -> 3.0 version upgrade due to scope of changes
