TMS Driver Z180 Improvements
- TMS driver udpated to insert Z180 I/O waitstates internally so other code can run at full speed.
- Updated How-To documents from David.
- Fixed TUNE app to properly restore Z180 I/O waitstates after manipulating them.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,6 +1,7 @@
 Version 3.0.1
 -------------
 - WBW: Increase XModem timeout waiting for host to start sending
+- WBW: Update TMS driver to dynamically increase Z180 I/O W/S inside driver
 
 Version 3.0.0
 -------------
