--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -2,6 +2,8 @@ Version 3.0.1
 -------------
 - WBW: Increase XModem timeout waiting for host to start sending
 - WBW: Update TMS driver to dynamically increase Z180 I/O W/S inside driver
+- MJS: Update CLRDIR for CP/M 3 compatibility
+- WBW: Corrected cursor on/off esc sequence in pre-configured ZDE.
 
 Version 3.0.0
 -------------
