--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -3,7 +3,9 @@ Version 3.0.1
 - WBW: Increase XModem timeout waiting for host to start sending
 - WBW: Update TMS driver to dynamically increase Z180 I/O W/S inside driver
 - MJS: Update CLRDIR for CP/M 3 compatibility
-- WBW: Corrected cursor on/off esc sequence in pre-configured ZDE.
+- WBW: Corrected cursor on/off esc sequence in pre-configured ZDE
+- WBW: Fix automatic CRT console switching under CP/M 3 and ZPM3
+- WBW: DSRTC driver now correctly returns an error if there is no RTC present
 
 Version 3.0.0
 -------------
