New ROMLDR and INTRTC driver
- Refactored romldr.asm
- Added new periodic timer based RTC driver

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,3 +1,8 @@
+Version 3.1
+-----------
+- WBW: Refactored ROM Loader
+- WBW: INTRTC periodic timer based clock
+
 Version 3.0.1
 -------------
 - WBW: Increase XModem timeout waiting for host to start sending
