--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -2,6 +2,7 @@ Version 3.1
 -----------
 - WBW: Refactored ROM Loader
 - WBW: INTRTC periodic timer based clock
+- WBW: FDISK80 updated to allow reserving up to 256 slices
 
 Version 3.0.1
 -------------
