--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -5,6 +5,7 @@ Version 3.1
 - WBW: FDISK80 updated to allow reserving up to 256 slices
 - WBW: Added support dual 16C550 UART on RC2014 platform
 - WBW: Made .com images smaller (contain only Z-System now)
+- WBW: Support automatic clock hardware detection and fallback
 
 Version 3.0.1
 -------------
