--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -7,6 +7,7 @@ Version 3.1
 - WBW: Made .com images smaller (contain only Z-System now)
 - WBW: Support automatic clock hardware detection and fallback
 - WBW: Support use of CTC for SIO baud rate divisors
+- WBW: Updated IDE and PPIDE drivers to improve old CF Card compatibility
 
 Version 3.0.1
 -------------
