--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -8,6 +8,7 @@ Version 3.1
 - WBW: Support automatic clock hardware detection and fallback
 - WBW: Support use of CTC for SIO baud rate divisors
 - WBW: Updated IDE and PPIDE drivers to improve old CF Card compatibility
+- WBW: Support TIMER mode in CTC driver
 
 Version 3.0.1
 -------------
