Disk Catalog & Loader Console Command
- Disk Catalog document has been added to the Doc directory courtesy of Mykl Orders.
- Loader enhanced to allow switching the console device before booting OS or ROM app.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -11,6 +11,7 @@ Version 3.1
 - WBW: Support TIMER mode in CTC driver
 - D?N: Added sound driver support
 - D?N: Added SN76489 sound chip driver
+- M?O: RomWBW Disk Catalog document
 
 Version 3.0.1
 -------------
