ChangeLog: Added entries for TMS/SYSTIME

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -12,6 +12,7 @@ Version 3.1
 - DEN: Added sound driver support
 - DEN: Added SN76489 sound chip driver
 - M?O: RomWBW Disk Catalog document
+- DEN: Updated TMS to optionally trigger SYSTIMER interrupt (TMSTIMENABLE)
 
 Version 3.0.1
 -------------
