--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -14,6 +14,7 @@ Version 3.1
 - M?O: RomWBW Disk Catalog document
 - DEN: Updated TMS to optionally trigger SYSTIMER interrupt (TMSTIMENABLE)
 - J?M: Updated KERMIT applications with VT100 terminal support
+- A?C: Added support for EPFDC
 
 Version 3.0.1
 -------------
