Propeller VGA Signal Timing Update
- Propeller VGA signal now uses 60Hz refresh for  better compatibility with all VGA monitors

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -2,6 +2,7 @@ Version 3.1.1
 -------------
 - WBW: Version bumped due to pervasive changes
 - WBW: Preliminary hard disk partition support (backward compatible)
+- WBW: Change Propeller VGA signal timings to 60Hz refresh
 
 Version 3.1
 -----------
