--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -5,6 +5,7 @@ Version 3.1.1
 - WBW: Change Propeller VGA signal timings to 60Hz refresh
 - WBW: Enhanced SYSTEM RESET function to allow a warm start back to boot loader
 - C?O: Add DUART driver
+- WBW: Early Z280 support (requires 512K RAM/ROM board)
 
 Version 3.1
 -----------
