--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -6,6 +6,7 @@ Version 3.1.1
 - WBW: Enhanced SYSTEM RESET function to allow a warm start back to boot loader
 - C?O: Add DUART driver
 - WBW: Early Z280 support (requires 512K RAM/ROM board)
+- HCS: ZRC memory manager support
 
 Version 3.1
 -----------
