--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -7,6 +7,7 @@ Version 3.1.1
 - C?O: Add DUART driver
 - WBW: Early Z280 support (requires 512K RAM/ROM board)
 - HCS: ZRC memory manager support
+- S?K: Support for Tiny Z80 by Sergey
 
 Version 3.1
 -----------
@@ -121,7 +122,7 @@ Version 2.9.1
 - PMS: Added Forth, Nascom BASIC, and Tasty BASIC to ROM
 - PMS: Refactored ROM Loader to support more ROM images, now table driven
 - WBW: Refactored DSKY code
-- SK:  Initial support for Easy Z80
+- S?K:  Initial support for Easy Z80
 - PMS: Enhance VDU driver to support alternative screen dimensions
 - WBW: DDT and DDTZ modified to use RST 30 instead of RST 38 to avoid conflicts with IM 1 interrupts
 - WBW: Added timer interrupt support for CTC under Zeta 2 and Easy Z80
