--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -9,6 +9,7 @@ Version 3.1.1
 - HCS: ZRC memory manager support
 - S?K: Support for Tiny Z80 by Sergey
 - E?B: Support for v6 YM/AY sound card
+- C?M: Support for RC2014 bus PropIO V2
 
 Version 3.1
 -----------
