--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -10,6 +10,8 @@ Version 3.1.1
 - S?K: Support for Tiny Z80 by Sergey
 - E?B: Support for v6 YM/AY sound card
 - C?M: Support for RC2014 bus PropIO V2
+- W?S: Updated FLASH software to v1.3.3
+- PMS: Preliminary support for writing to FLASH ROMs
 
 Version 3.1
 -----------
