--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -22,6 +22,7 @@ Version 3.1.1
 - WBW: Add support for ZZRCC
 - WBW: Allow selection of RAM/ROM disk individually in build
 - WBW: Support 256KB ROM size
+- WBW: CP/M 3 RTC support is now complete (reads and writes RTC date/time)
 
 Version 3.1
 -----------
