--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -27,6 +27,8 @@ Version 3.1.1
 - WBW: COPY.COM updated from v1.72 -> v1.73 throughout distribution
 - D?M: CP/NET for CP/M 2.2 and CP/M 3 (requires MT011)
 - D?M: SD driver fixes for MT011
+- J?C: Added FIND application from Jay Cotton
+- PMS: Preliminary support for I2C-based DS1307 clock
 
 Version 3.1
 -----------
