--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -29,6 +29,7 @@ Version 3.1.1
 - D?M: SD driver fixes for MT011
 - J?C: Added FIND application from Jay Cotton
 - PMS: Preliminary support for I2C-based DS1307 clock
+- WBW: FD driver auto hardware detect (thanks Alan Cox)
 
 Version 3.1
 -----------
