ZCPRD&J and UNZIPZ4
Contributions from Lars Nelson:

- ZCPRD&J has been slightly enhanced and a couple minor bugs fixed.
- UNZIPZ4 generally handles modern ZIP compression algorithms.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -33,6 +33,8 @@ Version 3.1.1
 - D?N: Added support for TMS V9958 VDU
 - D?N: Added support for MSX keyboard
 - D?N: Added support for RP5C01 RTC
+- L?N: Slightly enhanced ZCPRD&J w/ a couple bug fixes
+- L?N: UNZIPZ4 which handles most modern ZIP file compression algorithms
 
 Version 3.1
 -----------
