--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -36,6 +36,9 @@ Version 3.1.1
 - L?N: Slightly enhanced ZCPRD&J w/ a couple bug fixes
 - L?N: UNZIPZ4 which handles most modern ZIP file compression algorithms
 - AJL: Preliminary support for MBC systems
+- WBW: Added preliminary support for DSKYng
+- WBW: Elevated MBC to a platform
+- WBW: Added support for MBC user LEDs
 
 Version 3.1
 -----------
