--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -41,6 +41,7 @@ Version 3.1.1
 - WBW: Added support for MBC user LEDs
 - PMS: Early DMA support
 - W?S: Updated FLASH software to v1.3.5 (supports 128KB A29010B, 512KB A29040B)
+- DDW: Support for DSKYng capabitlities
 
 Version 3.1
 -----------
