--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -42,6 +42,7 @@ Version 3.1.1
 - PMS: Early DMA support
 - W?S: Updated FLASH software to v1.3.5 (supports 128KB A29010B, 512KB A29040B)
 - DDW: Support for DSKYng capabitlities
+- WBW: Added Phil Summers' ROM Updater into ROM Loader
 
 Version 3.1
 -----------
