Add Bank Selection to Debug Monitor
- The debug monitor will not display the current bank id in the prompt
- The debug monitor has a new command to set the current bank for the lower 32K
NOTE: Bank selection is not possible when running under interrupt mode 1.  The command will be rejected with an error.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -43,6 +43,7 @@ Version 3.1.1
 - W?S: Updated FLASH software to v1.3.5 (supports 128KB A29010B, 512KB A29040B)
 - DDW: Support for DSKYng capabitlities
 - WBW: Added Phil Summers' ROM Updater into ROM Loader
+- AJL: Added ramtest app (requires SBC and MBC for now)
 
 Version 3.1
 -----------
