--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -48,6 +48,7 @@ Version 3.1.1
 - WBW: Added support for MBC FDC to FDU application
 - WBW: Added support for MBC FDC to HBIOS
 - WBW: Refactored make process
+- WBW: Added ROM verification to boot process
 
 Version 3.1
 -----------
