--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -53,6 +53,7 @@ Version 3.1.1
 - WBW: Add support for LINC sound card
 - WBW: Add interrupt receive support to UART driver
 - PMS: Add XModem transfer within Debug Monitor
+- PMS & AJL: Add DMAMON test application
 
 Version 3.1
 -----------
