--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -54,6 +54,7 @@ Version 3.1.1
 - WBW: Add interrupt receive support to UART driver
 - PMS: Add XModem transfer within Debug Monitor
 - PMS & AJL: Add DMAMON test application
+- LWN: Substantial BPBIOS cleanup
 
 Version 3.1
 -----------
