Sync Windows Build
- Latest changes to Linux/MacOS build needed to be added to Windows build to restore binary identical build results.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -54,7 +54,10 @@ Version 3.1.1
 - WBW: Add interrupt receive support to UART driver
 - PMS: Add XModem transfer within Debug Monitor
 - PMS & AJL: Add DMAMON test application
+- PMS: Add ZMP adaptation
 - LWN: Substantial BPBIOS cleanup
+- AJL: Add ZMD adaptation
+- D?T: Substantial update to TastyBasic incuding a .COM executable
 
 Version 3.1
 -----------
