--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -64,6 +64,7 @@ Version 3.1.1
 - WBW: Add support for "romless" booting
 - L?N: Fixes for ZCPR-D&J (buffer overflow, default drive/user)
 - J?P: Add support for DS1501 RTC
+- LLS: Added a user defined mode for SD Card interfaces (not complete)
 
 Version 3.1
 -----------
