--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -66,6 +66,7 @@ Version 3.1.1
 - J?P: Add support for DS1501 RTC
 - LLS: Added a user defined mode for SD Card interfaces (not complete)
 - L?N: Updated ZDE to v1.8 including time stamp preservation fixes
+- D?M: Minor update to CP/NET client files, fix to CPNBOOT
 
 Version 3.1
 -----------
