--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -67,6 +67,7 @@ Version 3.1.1
 - LLS: Added a user defined mode for SD Card interfaces (not complete)
 - L?N: Updated ZDE to v1.8 including time stamp preservation fixes
 - D?M: Minor update to CP/NET client files, fix to CPNBOOT
+- WBW: Added p-System IV.0 Z80 implementation
 
 Version 3.1
 -----------
