--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -9,7 +9,7 @@ Version 3.1.1
 - HCS: ZRC memory manager support
 - S?K: Support for Tiny Z80 by Sergey
 - E?B: Support for v6 YM/AY sound card
-- C?M: Support for RC2014 bus PropIO V2
+- C?M: Support for RCBus bus PropIO V2
 - W?S: Updated FLASH software to v1.3.4
 - PMS: Preliminary support for writing to FLASH ROMs
 - PMS: Creation of process to update ROM system area w/o updating ROM disk contents
@@ -75,7 +75,7 @@ Version 3.1
 - WBW: Refactored ROM Loader
 - WBW: INTRTC periodic timer based clock
 - WBW: FDISK80 updated to allow reserving up to 256 slices
-- WBW: Added support dual 16C550 UART on RC2014 platform
+- WBW: Added support dual 16C550 UART on RCBus platform
 - WBW: Made .com images smaller (contain only Z-System now)
 - WBW: Support automatic clock hardware detection and fallback
 - WBW: Support use of CTC for SIO baud rate divisors
@@ -113,8 +113,8 @@ Version 2.9.2
 - WBW: Support two SIO modules w/ auto-detection
 - PMS: Support ECB USB-FIFO board
 - WBW: Fixed ASSIGN issue with incorrect DPB selection
-- WBW: Add RC2014 Z180 AY sound support to TUNE app
-- WBW: Add RC2014 AY sound support to AY driver
+- WBW: Add RCBus Z180 AY sound support to TUNE app
+- WBW: Add RCBus AY sound support to AY driver
 - WBW: Add SC126 platform
 - WBW: Config files cleanup
 - WBW: Add interrupt support to ASCI driver
@@ -133,7 +133,7 @@ Version 2.9.2
 - PMS: Add sound support to NASCOM BASIC
 - WBW: Updated FAT to add MD and FORMAT commands
 - WBW: Add CP/M 3 (experimental)
-- M?T: Support Shift register SPI WIZNET for RC2014
+- M?T: Support Shift register SPI WIZNET for RCBus
 - PLS: Added seconds register in HBIOS
 - WBW: More flexible table-driven config in TUNE.COM
 - PMS: Added timer support for Zilog Peripherals ECB Board
@@ -161,7 +161,7 @@ Version 2.9.2
 
 Version 2.9.1
 -------------
-- E?B: Added support for RC2014 RTC
+- E?B: Added support for RCBus RTC
 - WBW: Converted PTXPLAY to TUNE (now plays PT2/PT3/MYM sounds files)
 - WBW: Updated Win32DiskImager to v1.0
 - WBW: Implemented character attributes on Propeller based consoles
@@ -171,7 +171,7 @@ Version 2.9.1
 - WBW: Update default IOBYTE so that LST:=LPT: by default
 - WBW: Fixed missing drive/head setup for writes in PPIDE
 - WBW: Fixed XModem HBIOS console driver for file send operations
-- WBW: Preliminary support for RC180 platform (Z180 module in RC2014)
+- WBW: Preliminary support for RC180 platform (Z180 module in RCBus)
 - WBW: Added NZCOM distribution files to third slice of hard disk image
 - WBW: Fixed getnum32 bug in MODE command (found by Phil Summers)
 - PMS: Added serial support for Zilog Peripherals Baord
@@ -189,26 +189,26 @@ Version 2.9.1
 - WBW: Added timer interrupt support for CTC under Zeta 2 and Easy Z80
 - WBW: Support LBA style access in floppy driver
 - WBW: Added beta version of FAT filesystem utility (copy, dir, del, ren)
-- SCC: Added support for native memory addressing on Z180-based RC2014
+- SCC: Added support for native memory addressing on Z180-based RCBus
 - PMS: Dynamically discover and display processor type at boot
 - J?L: Added German keyboard support to PPK and KBD drivers
 
 Version 2.9.0
 -------------
 - WBW: Implemented multi-sector I/O in all disk drivers
-- WBW: Added support for RC2014 SMB Floppy controller modules (SMC and WDC)
+- WBW: Added support for RCBus SMB Floppy controller modules (SMC and WDC)
 - WBW: New function dispatching for character/disk/video drivers
-- WBW: Updated FDU app to support RC2014 floppy controllers
+- WBW: Updated FDU app to support RCBus floppy controllers
 - WBW: Added TIMER app to display system timer value
 - WBW: Refactored interrupt management code
 - WBW: Added PTXPLAY application and sample tunes
 
 Version 2.8.6
 -------------
-- WBW: Added support for RC2014 (SIO and ACIA drivers primarily)
+- WBW: Added support for RCBus (SIO and ACIA drivers primarily)
 - WBW: Automatically detect and run PROFILE.SUB on boot drive if it exists
 - WBW: Fixed Dual SD Board detection
-- WBW: Added console support to XModem (for RC2014 primarily)
+- WBW: Added console support to XModem (for RCBus primarily)
 - E?B: Fixed IDE/PPIDE when used with non-CF drives
 - WBW: Patched SUBMIT.COM so that it always puts temp file on A: for immediate execution
 - WBW: Accommodate spin up time for true IDE hard disks (IDE or PPIDE)
