--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -2,6 +2,8 @@ Version 3.2.1
 -------------
 - M?P: Fixed Zeta 2 FDD and CPUSPD config settings
 - WBW: Fixed SURVEY.COM (again)
+- DDW: Updates to DOS/65 binaries in disk images
+- PMS: Updates to VGMPLAY including support for YM2151
 
 Version 3.2
 -----------
