--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,6 +1,8 @@
 Version 3.3
 -----------
-- Support Front Panel switches
+- WBW: Support Front Panel switches
+- A?C: Preliminary support for Z80-Retro
+- A?C: Support for SD PIO
 
 Version 3.2.1
 -------------
