Z80-Retro SD Card Support (Alan Cox)

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -3,6 +3,7 @@ Version 3.3
 - WBW: Support Front Panel switches
 - A?C: Preliminary support for Z80-Retro
 - A?C: Support for SD PIO
+- A?C: Support for Z80-Retro SD interface
 
 Version 3.2.1
 -------------
